// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateApprovalWidget > snapshot — @/ alias 1`] = `
"'use client'
// Generated by ai-wingman — edit freely, you own this file.

import { isToolUIPart } from 'ai'
import type { UIMessage } from 'ai'

interface ApprovalWidgetProps {
  messages: UIMessage[]
  addToolApprovalResponse: (opts: { id: string; approved: boolean; reason?: string }) => void
}

export function ApprovalWidget({ messages, addToolApprovalResponse }: ApprovalWidgetProps) {
  const pending = messages
    .flatMap((m) => m.parts)
    .filter(isToolUIPart)
    .filter((p) => p.state === 'approval-requested')

  if (pending.length === 0) return null

  return (
    <div style={{ padding: '12px', border: '1px solid #e5e7eb', borderRadius: '8px', margin: '8px 0' }}>
      {pending.map((p) => (
        <div key={p.toolCallId}>
          <p style={{ margin: '0 0 8px', fontSize: '14px' }}>
            Approve <strong>{String(p.type).replace('tool-', '')}</strong>?
          </p>
          <div style={{ display: 'flex', gap: '8px' }}>
            <button
              onClick={() => addToolApprovalResponse({ id: p.approval.id, approved: true })}
              style={{ padding: '4px 12px', background: '#16a34a', color: '#fff', border: 'none', borderRadius: '4px', cursor: 'pointer' }}
            >
              Approve
            </button>
            <button
              onClick={() => addToolApprovalResponse({ id: p.approval.id, approved: false, reason: 'User rejected' })}
              style={{ padding: '4px 12px', background: '#dc2626', color: '#fff', border: 'none', borderRadius: '4px', cursor: 'pointer' }}
            >
              Reject
            </button>
          </div>
        </div>
      ))}
    </div>
  )
}
"
`;

exports[`generateApprovalWidget > snapshot — ~/ alias 1`] = `
"'use client'
// Generated by ai-wingman — edit freely, you own this file.

import { isToolUIPart } from 'ai'
import type { UIMessage } from 'ai'

interface ApprovalWidgetProps {
  messages: UIMessage[]
  addToolApprovalResponse: (opts: { id: string; approved: boolean; reason?: string }) => void
}

export function ApprovalWidget({ messages, addToolApprovalResponse }: ApprovalWidgetProps) {
  const pending = messages
    .flatMap((m) => m.parts)
    .filter(isToolUIPart)
    .filter((p) => p.state === 'approval-requested')

  if (pending.length === 0) return null

  return (
    <div style={{ padding: '12px', border: '1px solid #e5e7eb', borderRadius: '8px', margin: '8px 0' }}>
      {pending.map((p) => (
        <div key={p.toolCallId}>
          <p style={{ margin: '0 0 8px', fontSize: '14px' }}>
            Approve <strong>{String(p.type).replace('tool-', '')}</strong>?
          </p>
          <div style={{ display: 'flex', gap: '8px' }}>
            <button
              onClick={() => addToolApprovalResponse({ id: p.approval.id, approved: true })}
              style={{ padding: '4px 12px', background: '#16a34a', color: '#fff', border: 'none', borderRadius: '4px', cursor: 'pointer' }}
            >
              Approve
            </button>
            <button
              onClick={() => addToolApprovalResponse({ id: p.approval.id, approved: false, reason: 'User rejected' })}
              style={{ padding: '4px 12px', background: '#dc2626', color: '#fff', border: 'none', borderRadius: '4px', cursor: 'pointer' }}
            >
              Reject
            </button>
          </div>
        </div>
      ))}
    </div>
  )
}
"
`;

exports[`generateInterruptPage > snapshot — @/ alias 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

'use client'

import { useChat } from '@ai-sdk/react'
import { DefaultChatTransport } from 'ai'
import { ApprovalWidget } from '@/components/approval-widget'

export default function InterruptPage() {
  const { messages, sendMessage, status, addToolApprovalResponse } = useChat({
    transport: new DefaultChatTransport({ api: '/api/interrupt' }),
  })

  return (
    <div className="flex flex-col h-screen max-w-2xl mx-auto p-4 gap-4">
      <div className="flex-1 overflow-y-auto flex flex-col gap-3">
        {messages.map((msg) => (
          <div
            key={msg.id}
            className={\`rounded-lg p-3 text-sm \${
              msg.role === 'user' ? 'bg-blue-50 self-end' : 'bg-gray-50 self-start'
            }\`}
          >
            {msg.parts.map((part, i) => {
              if (part.type === 'text') {
                return <p key={i}>{(part as any).text}</p>
              }
              if (part.type.startsWith('tool-')) {
                const p = part as any
                return (
                  <span key={i} className="font-mono text-xs text-muted-foreground">
                    {p.toolName ?? String(part.type).replace('tool-', '')}
                    {p.state === 'output-available' ? \` → \${JSON.stringify(p.output)}\` : ' …'}
                  </span>
                )
              }
              return null
            })}
          </div>
        ))}
      </div>

      {/* Approval widget renders above the input when a pending approval exists */}
      <ApprovalWidget messages={messages} addToolApprovalResponse={addToolApprovalResponse} />

      <form
        onSubmit={(e) => {
          e.preventDefault()
          const input = (e.currentTarget.elements.namedItem('message') as HTMLInputElement)
          if (input.value.trim()) {
            sendMessage({ text: input.value })
            input.value = ''
          }
        }}
        className="flex gap-2"
      >
        <input
          name="message"
          placeholder="Type a message..."
          disabled={status !== 'ready'}
          className="flex-1 border rounded px-3 py-2 text-sm"
        />
        <button
          type="submit"
          disabled={status !== 'ready'}
          className="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700 disabled:opacity-50"
        >
          Send
        </button>
      </form>
    </div>
  )
}
"
`;

exports[`generateInterruptPage > snapshot — ~/ alias 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

'use client'

import { useChat } from '@ai-sdk/react'
import { DefaultChatTransport } from 'ai'
import { ApprovalWidget } from '~/components/approval-widget'

export default function InterruptPage() {
  const { messages, sendMessage, status, addToolApprovalResponse } = useChat({
    transport: new DefaultChatTransport({ api: '/api/interrupt' }),
  })

  return (
    <div className="flex flex-col h-screen max-w-2xl mx-auto p-4 gap-4">
      <div className="flex-1 overflow-y-auto flex flex-col gap-3">
        {messages.map((msg) => (
          <div
            key={msg.id}
            className={\`rounded-lg p-3 text-sm \${
              msg.role === 'user' ? 'bg-blue-50 self-end' : 'bg-gray-50 self-start'
            }\`}
          >
            {msg.parts.map((part, i) => {
              if (part.type === 'text') {
                return <p key={i}>{(part as any).text}</p>
              }
              if (part.type.startsWith('tool-')) {
                const p = part as any
                return (
                  <span key={i} className="font-mono text-xs text-muted-foreground">
                    {p.toolName ?? String(part.type).replace('tool-', '')}
                    {p.state === 'output-available' ? \` → \${JSON.stringify(p.output)}\` : ' …'}
                  </span>
                )
              }
              return null
            })}
          </div>
        ))}
      </div>

      {/* Approval widget renders above the input when a pending approval exists */}
      <ApprovalWidget messages={messages} addToolApprovalResponse={addToolApprovalResponse} />

      <form
        onSubmit={(e) => {
          e.preventDefault()
          const input = (e.currentTarget.elements.namedItem('message') as HTMLInputElement)
          if (input.value.trim()) {
            sendMessage({ text: input.value })
            input.value = ''
          }
        }}
        className="flex gap-2"
      >
        <input
          name="message"
          placeholder="Type a message..."
          disabled={status !== 'ready'}
          className="flex-1 border rounded px-3 py-2 text-sm"
        />
        <button
          type="submit"
          disabled={status !== 'ready'}
          className="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700 disabled:opacity-50"
        >
          Send
        </button>
      </form>
    </div>
  )
}
"
`;

exports[`generateInterruptRoute > snapshot — @/ alias 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Human-in-the-loop via needsApproval (AI SDK v6 native pattern)
// ─────────────────────────────────────────────────────────────────────────────
// 1. Client sends messages → POST /api/interrupt
// 2. streamText calls a tool with needsApproval: true
// 3. SDK streams state: "approval-requested" to the client
// 4. ApprovalWidget renders Approve / Reject buttons
// 5. useChat's addToolApprovalResponse(id, approved) re-submits the decision
// 6. SDK resumes: executes tool on approval, or skips on rejection
// ─────────────────────────────────────────────────────────────────────────────

import { convertToModelMessages, stepCountIs, streamText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { APPROVAL_TOOLS } from '@/lib/interrupt-tools'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30

export async function POST(req: Request) {
  const { messages } = await req.json()

  const result = streamText({
    model: anthropic("claude-opus-4-5"),
    system: 'You are a helpful assistant. Use the available tools to complete tasks.',
    tools: APPROVAL_TOOLS,
    stopWhen: stepCountIs(5),
    messages: await convertToModelMessages(messages),
  })

  return result.toUIMessageStreamResponse()
}
"
`;

exports[`generateInterruptRoute > snapshot — ~/ alias 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Human-in-the-loop via needsApproval (AI SDK v6 native pattern)
// ─────────────────────────────────────────────────────────────────────────────
// 1. Client sends messages → POST /api/interrupt
// 2. streamText calls a tool with needsApproval: true
// 3. SDK streams state: "approval-requested" to the client
// 4. ApprovalWidget renders Approve / Reject buttons
// 5. useChat's addToolApprovalResponse(id, approved) re-submits the decision
// 6. SDK resumes: executes tool on approval, or skips on rejection
// ─────────────────────────────────────────────────────────────────────────────

import { convertToModelMessages, stepCountIs, streamText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { APPROVAL_TOOLS } from '~/lib/interrupt-tools'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30

export async function POST(req: Request) {
  const { messages } = await req.json()

  const result = streamText({
    model: anthropic("claude-opus-4-5"),
    system: 'You are a helpful assistant. Use the available tools to complete tasks.',
    tools: APPROVAL_TOOLS,
    stopWhen: stepCountIs(5),
    messages: await convertToModelMessages(messages),
  })

  return result.toUIMessageStreamResponse()
}
"
`;

exports[`generateInterruptTools > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Add needsApproval: true to any tool that requires human sign-off before executing.
// The SDK will pause execution and stream state: 'approval-requested' to the client.

import { tool } from 'ai'
import { z } from 'zod'

export const sendEmail = tool({
  description: 'Send an email to a recipient',
  inputSchema: z.object({
    to: z.string().email(),
    subject: z.string(),
    body: z.string(),
  }),
  // Pause and ask for human approval before executing
  needsApproval: true,
  execute: async ({ to, subject }: { to: string; subject: string; body: string }) => ({ sent: true, to, subject }),
})

// Add all tools that need approval here
export const APPROVAL_TOOLS = { sendEmail }
"
`;
